# d2rr-toolkit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  VERIFICATION_LOG.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  DB_SCHEMA.md  GUI_STAT_BREAKDOWN_API.md
docs/spec/: d2s_format_spec.md
src/d2rr_toolkit/: BULK_HEADER_PARSER.md  BULK_SPRITE_LOADER.md  CHARACTER_SELECT.md  FORMATTED_PROPERTIES.md  GAME_DATA_CACHE.md  LOGGING_HYGIENE.md  PALETTE_TINTING.md  QUICKSTART.md  SOCKET_LAYOUT.md  UNIQUE_SPRITES.md  __init__.py  archive.py  backup.py  config.py  constants.py  exceptions.py  logging.py
src/d2rr_toolkit/adapters/: __init__.py
src/d2rr_toolkit/analysis/: __init__.py  section6.py
src/d2rr_toolkit/catalog/: __init__.py  item_catalog.py
src/d2rr_toolkit/cli/: __init__.py  _archive.py  _common.py  _cube.py  _inspect.py  _parse.py  _stash.py
src/d2rr_toolkit/database/: __init__.py  item_db.py  modes.py  section5_db.py
src/d2rr_toolkit/display/: __init__.py  colors.py  inventory_layout.py  invtransform.py  item_display.py  palette.py  portraits.py  sprite_keys.py  tinted_sprite.py
src/d2rr_toolkit/game_data/: __init__.py  _roll_types.py  affix_rolls.py  automagic.py  charstats.py  corruption_rolls.py  cubemain.py  enchantment_recipes.py  gems.py  hireling.py  item_names.py  item_stat_cost.py  item_types.py  properties.py  property_formatter.py  sets.py  skills.py  stat_breakdown.py
src/d2rr_toolkit/meta/: __init__.py  cache.py  source_versions.py
src/d2rr_toolkit/models/: __init__.py  character.py
src/d2rr_toolkit/operations/: __init__.py  rune_cube_up.py
src/d2rr_toolkit/parsers/: __init__.py  bit_reader.py  d2i_parser.py  d2s_parser.py  d2s_parser_header.py  d2s_parser_items.py  d2s_parser_merc.py  d2s_parser_stats.py  exceptions.py  huffman.py
src/d2rr_toolkit/sprites/: __init__.py  bulk_loader.py  dc6_indexed.py  resolver.py
src/d2rr_toolkit/writers/: __init__.py  checksum.py  d2i_writer.py  d2s_writer.py  item_utils.py
tests/: README.md  build_demo_character.py  conftest.py  run_all_tc.py  test_armor_durability_10bit.py  test_backup_toctou.py  test_bulk_extract_from_d2i.py  test_bulk_extract_from_d2s.py  test_bulk_header_parser.py  test_bulk_loader_helpers.py  test_bulk_sprite_loader.py  test_cache_tmp_cleanup.py  test_casc_mod_overlay_traversal.py  test_character_header_fields.py  test_charm_affix_decoding.py  test_cli_sc_hc_isolation.py  test_collapse_roll_ranges.py  test_config_env_vars.py  test_d2i_empty_tab_corruption.py  test_d2i_parser_no_phantom_tabs.py  test_d2i_section5.py  test_d2i_writer_jm_count_overflow.py  test_d2i_writer_legacy_malformed_sections.py  test_d2i_writer_section6_drift.py  test_d2s_parse_snapshot.py  test_d2s_trailing_bytes.py  test_d2s_writer_append.py  test_database_mode_binding.py  test_database_modes.py  test_db_context_manager.py  test_decode_sprite_tail_bug.py  test_display_inventory_layout.py  test_display_sprite_keys.py  test_frozenorb_audit.py  test_game_data_cache.py  test_inline_color_codes.py  test_item_catalog.py  test_item_db_migration_fail_loud.py  test_merc_items.py  test_mrlockhart_display_bugs.py  (+20 more)
tests/cases/TC01/: README.md  TestABC.d2s
tests/cases/TC02/: README.md  TestABC.d2s
tests/cases/TC03/: README.md  TestWarlock.d2s
tests/cases/TC04/: ModernSharedStashSoftCoreV2.d2i  README.md
tests/cases/TC05/: ModernSharedStashSoftCoreV2.d2i  README.md
tests/cases/TC06/: ModernSharedStashSoftCoreV2.d2i  README.md
tests/cases/TC07/: README.md  TestAmazon.d2s
tests/cases/TC08/: README.md  TestPaladin.d2s
tests/cases/TC09/: README.md  TestPaladin.d2s
tests/cases/TC10/: README.md  TestPaladin.d2s
tests/cases/TC11/: README.md  TestWarlock.d2s
tests/cases/TC12/: README.md  TestSorc.d2s
tests/cases/TC13/: README.md  TestSorc.d2s
tests/cases/TC14/: README.md  TestDruid.d2s
tests/cases/TC15/: README.md  TestAssa.d2s
tests/cases/TC16/: README.md  TestAssa.d2s
tests/cases/TC17/: README.md  TestNecro.d2s
tests/cases/TC18/: README.md  TestSorc.d2s
tests/cases/TC19/: README.md  TestSorc.d2s
tests/cases/TC20/: README.md  TestSorc.d2s
tests/cases/TC21/: README.md  TestSorc.d2s
tests/cases/TC22/: README.md  TestSorc.d2s
tests/cases/TC23/: README.md  TestSorc.d2s
tests/cases/TC24/: README.md  TestSorc.d2s
tests/cases/TC25/: README.md  (+1 more)
tests/verification/: verify_durability_fields.py  verify_encode4.py  verify_excel_diff.py  verify_extended_item_diagnostic.py  verify_find_missing_codes.py  verify_find_spr.py  verify_find_tc03_items.py  verify_header.py  verify_header_v105_offsets.py  verify_huffman.py  verify_item_bitstructure.py  verify_item_list.py  verify_item_properties.py  verify_missing_item_codes.py  verify_missing_stats.py  verify_property_bits.py  verify_stats_section.py  verify_tc01_full.py  verify_tc03_item1.py  verify_tc03_trace.py  verify_tc11_exact.py  verify_tc11_positions.py  verify_tc11_props_start.py  verify_tc11_sockets.py  verify_weapon_layout.py
(+191 files in other folders)
